completed upto testimonial section

--- a/index.html
+++ b/index.html
@@ -45,37 +45,42 @@
     </header>
 
     <section class="container">
-      <div class="features">
-        <img src="images/icon-access-anywhere.svg" alt="access anywhere" />
-        <h3>Access your files, anywhere</h3>
-        <p>
-          The ability to use a smartphone, tablet, or computer to access your
-          account means your files follow you everywhere.
-        </p>
+      <div class="row">
+        <div class="features">
+          <img src="images/icon-access-anywhere.svg" alt="access anywhere" />
+          <h3>Access your files, anywhere</h3>
+          <p>
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
+          </p>
+        </div>
+        <div class="features">
+          <img src="images/icon-security.svg" alt="security" />
+          <h3>Security you can trust</h3>
+          <p>
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your files.
+          </p>
+        </div>
       </div>
-      <div class="features">
-        <img src="images/icon-security.svg" alt="security" />
-        <h3>Security you can trust</h3>
-        <p>
-          2-factor authentication and user-controlled encryption are just a
-          couple of the security features we allow to help secure your files.
-        </p>
-      </div>
-      <div class="features">
-        <img src="images/icon-collaboration.svg" alt="collaboration" />
-        <h3>Real-time collaboration</h3>
-        <p>
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
-      </div>
-      <div class="features">
-        <img src="images/icon-any-file.svg" alt="any file" />
-        <h3>Store any type of file</h3>
-        <p>
-          Whether you're sharing holidays photos or work documents, Fylo has you
-          covered allowing for all file types to be securely stored and shared.
-        </p>
+      <div class="row">
+        <div class="features">
+          <img src="images/icon-collaboration.svg" alt="collaboration" />
+          <h3>Real-time collaboration</h3>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+        </div>
+        <div class="features">
+          <img src="images/icon-any-file.svg" alt="any file" />
+          <h3>Store any type of file</h3>
+          <p>
+            Whether you're sharing holidays photos or work documents, Fylo has
+            you covered allowing for all file types to be securely stored and
+            shared.
+          </p>
+        </div>
       </div>
     </section>
 
@@ -84,6 +89,7 @@
         <img
           src="images/illustration-stay-productive.png"
           alt="stay productive"
+          class="motivation-img"
         />
         <div class="productive">
           <h3>Stay productive, wherever you are</h3>
@@ -95,7 +101,10 @@
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
-          <a href="#">See how Fylo works</a>
+          <a href="#" class="work-link"
+            >See how Fylo works
+            <img src="images/icon-arrow.svg" alt="icon-arrow"
+          /></a>
         </div>
       </div>
     </section>
@@ -109,8 +118,10 @@
         </p>
         <div class="person">
           <img src="images/profile-1.jpg" alt="Satish Patel" />
-          <h5>Satish Patel</h5>
-          <h6>Founder & CEO, Huddle</h6>
+          <div>
+            <h5>Satish Patel</h5>
+            <h6>Founder & CEO, Huddle</h6>
+          </div>
         </div>
       </div>
       <div class="testimonial">
@@ -121,8 +132,10 @@
         </p>
         <div class="person">
           <img src="images/profile-2.jpg" alt="Satish Patel" />
-          <h5>Bruce McKenzie</h5>
-          <h6>Founder & CEO, Huddle</h6>
+          <div>
+            <h5>Bruce McKenzie</h5>
+            <h6>Founder & CEO, Huddle</h6>
+          </div>
         </div>
       </div>
       <div class="testimonial">
@@ -133,8 +146,10 @@
         </p>
         <div class="person">
           <img src="images/profile-3.jpg" alt="Satish Patel" />
-          <h5>Iva Boyd</h5>
-          <h6>Founder & CEO, Huddle</h6>
+          <div>
+            <h5>Iva Boyd</h5>
+            <h6>Founder & CEO, Huddle</h6>
+          </div>
         </div>
       </div>
     </section>
