--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
     <title>
       Fylo landing page
     </title>
@@ -154,8 +158,8 @@
       </div>
     </section>
 
-    <form class="container">
-      <h2>Get early access today</h2>
+    <form>
+      <h1>Get early access today</h1>
       <p>
         It only takes a minute to sign up and our free starter tier is extremely
         generous. If you have any questions, our support team would be happy to
@@ -170,62 +174,64 @@
 
     <footer>
       <div class="container">
-        <div class="footer-section">
-          <img src="images/logo.svg" alt="logo" />
-          <div class="flex">
-            <img src="images/icon-location.svg" alt="location" />
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua
-            </p>
-          </div>
-        </div>
-
-        <div class="footer-section">
-          <div class="flex">
-            <img src="images/icon-phone.svg" alt="phone" />
-            <p>
-              +1-543-123-4567
-            </p>
+        <img src="images/logo.svg" alt="logo" />
+        <div class="flex">
+          <div class="footer-section">
+            <div class="flex flex-mini">
+              <img src="images/icon-location.svg" alt="location" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua
+              </p>
+            </div>
           </div>
 
-          <div class="flex">
-            <img src="images/icon-email.svg" alt="phone" />
-            <p>
-              example@fylo.com
-            </p>
+          <div class="footer-section">
+            <div class="flex flex-mini">
+              <img src="images/icon-phone.svg" alt="phone" />
+              <p>
+                +1-543-123-4567
+              </p>
+            </div>
+
+            <div class="flex flex-mini">
+              <img src="images/icon-email.svg" alt="phone" />
+              <p>
+                example@fylo.com
+              </p>
+            </div>
           </div>
-        </div>
 
-        <div class="footer-section">
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Jobs</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Blog</a></li>
-          </ul>
-        </div>
+          <div class="footer-section">
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
 
-        <div class="footer-section">
-          <ul>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-          </ul>
-        </div>
+          <div class="footer-section">
+            <ul>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+            </ul>
+          </div>
 
-        <div class="footer-section">
-          <ul>
-            <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
+          <div class="footer-section">
+            <ul class="social-icons">
+              <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
